--- a/templates/cpu.xml
+++ b/templates/cpu.xml
@@ -1,4 +1,4 @@
-<vcpu placement='static'><%= @nr_cpu %></vcpu>
+<vcpu placement='static'><%= nr_cpu %></vcpu>
 <cpu mode='host-passthrough' check='none'>
   <!--
   <topology cores="2" sockets="4" threads="1" />
