--- a/templates/os.xml
+++ b/templates/os.xml
@@ -1,8 +1,8 @@
 <os>
-  <type arch='<%= @arch %>' machine='virt'>hvm</type>
+  <type arch='<%= arch %>' machine='virt'>hvm</type>
   <loader readonly='yes' type='pflash'>/usr/share/edk2/aarch64/QEMU_EFI-pflash.raw</loader>
-  <kernel><%= @kernel %></kernel>
-  <initrd><%= @initrd %></initrd>
-  <cmdline><%= @cmdline %></cmdline>
-  <nvram>/var/lib/libvirt/qemu/nvram/<%= @job_id %>.fd</nvram>
+  <kernel><%= kernel %></kernel>
+  <initrd><%= initrd %></initrd>
+  <cmdline><%= cmdline %></cmdline>
+  <nvram>/var/lib/libvirt/qemu/nvram/<%= job_id %>.fd</nvram>
 </os>
