--- a/templates/disk.xml
+++ b/templates/disk.xml
@@ -1,8 +1,7 @@
-<!--
-<disk type='file' device='disk'>
-  <driver name='qemu' type='qcow2'/>
-  <source file='xxx'>
-  <backingStore>
-  <target='dev' bus='virtio'>
+<% if disk %>
+<disk type='block' device='disk'>
+	<driver name='qemu' type='raw'/>
+	<source dev='<%= disk %>'/>
+	<target dev='vda' bus='virtio'/>
 </disk>
--->
+<% end %>
